<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.chmap.kloop.confchmap.viewmodel.LghpInfoActivityViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_white_1000"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/background_info_text_view"
                android:paddingBottom="3dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="3dp"
                android:text="@string/info"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:paddingTop="3dp"
                android:text="@string/detail_info"
                android:textColor="@color/info_label_text_color"
                android:textSize="17sp" />
        </LinearLayout>
        <TextView


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@{@string/message_coordinate(viewModel.coordinateField.latitude,viewModel.coordinateField.longitude)}"
            android:textColor="@color/recommend_title_comment"
            android:textSize="18sp" />

        <TextView
            android:text="@{viewModel.pointInfoField}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"

            android:textColor="@color/recommend_title_comment"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/polution_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"

            android:textColor="@color/recommend_title_comment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/cuting"
            android:textColor="@color/recommend_title_comment"
            android:textSize="25sp" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/cutting_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="6dp"
            android:paddingTop="6dp"
            android:scrollbars="vertical"
          />

    </LinearLayout>

</layout>