<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.chmap.kloop.confchmap.viewmodel.LghpActivityViewModel" />
    </data>

    <RelativeLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.view.activity.MainActivity">


        <FrameLayout
            android:id="@+id/drawer_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme" />


                <LinearLayout
                    android:layout_below="@+id/toolbar"
                    android:id="@+id/layout_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"

                    android:background="@color/md_white_1000">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >



                        <LinearLayout

                            android:id="@+id/autocomplete_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true">


                            <TextView
                                android:id="@+id/text_repo_title"
                                android:textColor="@color/text_color_polution"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:paddingLeft="12dp"
                                android:paddingRight="12dp"
                                android:paddingTop="12dp"
                                android:textSize="17dp"
                                android:text="@string/from" />


                            <TextView
                                android:id="@+id/text_repo_content"
                                android:textColor="@color/text_color_polution"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:paddingLeft="12dp"
                                android:paddingRight="12dp"
                                android:paddingTop="12dp"
                                android:textSize="17dp"
                                android:text="Ваше местоположение" />


                        </LinearLayout>

                        <LinearLayout

                            android:layout_below="@+id/autocomplete_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >


                            <TextView
                                android:id="@+id/text_repo_description"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"

                                android:paddingLeft="12dp"
                                android:paddingRight="12dp"
                                android:paddingTop="10dp"
                                android:textColor="@color/text_color_polution"
                                android:textSize="17dp"
                                android:text="@string/to" />

                         <AutoCompleteTextView
                             android:id="@+id/autocomplete_to"
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
                             android:hint="@string/lghp"
                             android:paddingLeft="12dp"
                             android:paddingRight="12dp"
                             android:paddingTop="10dp"
                             android:textColor="@color/text_color_polution"
                             android:textSize="17dp"

                             />



                        </LinearLayout>
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:orientation="horizontal">

                        <TextView

                            android:id="@+id/text_watchers_text"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textSize="17sp"
                            android:textColor="@color/text_color_polution"
                            android:text="Расстояние" />



                    </LinearLayout>




                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:orientation="horizontal">



                        <TextView
                            android:id="@+id/text_watchers"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/text_color_polution"
                            android:text='@{viewModel.distanse}'
                             />



                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider" />



                    <FrameLayout

                        android:id="@+id/map_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        >
                    </FrameLayout>

                </LinearLayout>

            </RelativeLayout>

        </FrameLayout>
    </RelativeLayout>
</layout>